kubernetes/production/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: personal-tilen
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/acme-challenge-type: dns01
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - tilenpirih.com
      secretName: tilenpirih-com-cert
  rules:
    - host: tilenpirih.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: portfolio
                port:
                  number: 3000
